# Recuperado_Modulus

docs-develop/: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pydocstyle.ini  CONTRIBUTING.md  Dockerfile  LICENSE.txt  Makefile  README.md  conf.py  pyproject.toml  requirements.txt
docs-develop/api/: api_index.rst  modulus.domain.constraint.rst  modulus.domain.inferencer.rst  modulus.domain.monitor.rst  modulus.domain.validator.rst  modulus.eq.rst  modulus.geometry.rst  modulus.hydra.rst  modulus.loss.rst  modulus.models.rst  modulus.rst  modulus.utils.rst
docs-develop/images/user_guide/: afno.xml  pix2pix.xml  super_res.xml
docs-develop/test/: modulus_dictionary.json
docs-develop/user_guide/advanced/: 2d_heat_transfer.rst  conjugate_heat_transfer.rst  fpga.rst  industrial_heat_sink.rst  parametrized_simulations.rst
docs-develop/user_guide/basics/: lid_driven_cavity_flow.rst
docs-develop/user_guide/features/: constraints.rst
docs-develop/user_guide/foundational/: 1d_wave_equation.rst  2d_wave_equation.rst  inverse_problem.rst  linear_elasticity.rst  ode_spring_mass.rst  scalar_transport.rst  zero_eq_turbulence.rst
docs-develop/user_guide/neural_operators/: darcy_afno.rst  darcy_fno.rst  darcy_pino.rst  deeponet.rst  fourcastnet.rst
examples-release_22.09/: .gitattributes  LICENSE.txt  README.md
examples-release_22.09/aneurysm/: aneurysm.py
examples-release_22.09/anti_derivative/: data_informed.py  physics_informed.py
examples-release_22.09/bracket/: bracket.py
examples-release_22.09/chip_2d/: chip_2d.py  (+3 more)
modulus-release_22.09/: README.md
(+154 files in other folders)
